--- a/portfolio.html
+++ b/portfolio.html
@@ -36,11 +36,11 @@
       <!--button section-->
       <div>
         <ul class="list">
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+          <li><button type="button" class="button">Все</button></li>
+          <li><button type="button" class="button">Веб-сайты</button></li>
+          <li><button type="button" class="button">Приложения</button></li>
+          <li><button type="button" class="button">Дизайн</button></li>
+          <li><button type="button" class="button">Маркетинг</button></li>
         </ul>
       </div>
       <!-- Our projects -->
@@ -54,8 +54,8 @@
               height="294"
               width="370"
             />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <h2 class="projects">Технокряк</h2>
+            <p class="projects description">Веб-сайт</p>
           </li>
           <li>
             <img
@@ -64,8 +64,8 @@
               height="294"
               width="370"
             />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <h2 class="projects">Постер New Orlean vs Golden Star</h2>
+            <p class="projects description">Дизайн</p>
           </li>
           <li>
             <img
@@ -74,18 +74,18 @@
               height="294"
               width="370"
             />
-            <h2>Ресторан Seafood</h2>
-            <p>Приложение</p>
+            <h2 class="projects">Ресторан Seafood</h2>
+            <p class="projects description">Приложение</p>
           </li>
           <li>
             <img src="./images/headset.jpg" alt="Наушники" height="294" width="370" />
-            <h2>Проект Prime</h2>
-            <p>Маркетинг</p>
+            <h2 class="projects">Проект Prime</h2>
+            <p class="projects description">Маркетинг</p>
           </li>
           <li>
             <img src="./images/boxes.jpg" alt="Две коробки" height="294" width="370" />
-            <h2>Проект Boxes</h2>
-            <p>Приложение</p>
+            <h2 class="projects">Проект Boxes</h2>
+            <p class="projects description">Приложение</p>
           </li>
           <li>
             <img
@@ -94,18 +94,18 @@
               height="294"
               width="370"
             />
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <h2 class="projects">Inspiration has no Borders</h2>
+            <p class="projectsdescription">Веб-сайт</p>
           </li>
           <li>
             <img src="./images/limited-book.jpg" alt="Открытая книга" height="294" width="370" />
-            <h2>Издание Limited Edition</h2>
-            <p>Дизайн</p>
+            <h2 class="projects">Издание Limited Edition</h2>
+            <p class="projects description">Дизайн</p>
           </li>
           <li>
             <img src="./images/tag.jpg" alt="Бирка" height="294" width="370" />
-            <h2>Проект LAB</h2>
-            <p>Маркетинг</p>
+            <h2 class="projects">Проект LAB</h2>
+            <p class="projects description">Маркетинг</p>
           </li>
           <li>
             <img
@@ -114,8 +114,8 @@
               height="294"
               width="370"
             />
-            <h2>Growing Business</h2>
-            <p>Приложение</p>
+            <h2 class="projects">Growing Business</h2>
+            <p class="projects description">Приложение</p>
           </li>
         </ul>
       </section>
